# xplanemp2

./: .gitignore  CMakeLists.txt  Doxyfile  README.MULTIPLAYER  README.markdown
cmake/Modules/: FindXPSDK.cmake
include/: PlanesHandoff.h  SysOpenGL.h  XOGLUtils.h  XPCAircraft.h  XPMPMultiplayer.h  XPMPPlaneRenderer.h
src/: AplFSUtil.cpp  AplFSUtil.h  AustinCSL.cpp  AustinCSL.h  BitmapUtils.cpp  BitmapUtils.h  CSL.cpp  CSL.h  CSLLibrary.cpp  CSLLibrary.h  CSLLoaderThread.cpp  CSLLoaderThread.h  CullInfo.cpp  CullInfo.h  Interpolation.h  MapRendering.cpp  MapRendering.h  PlaneType.cpp  PlaneType.h  PlanesHandoff.c  PlatformUtils.h  PlatformUtils.lin.cpp  PlatformUtils.mac.cpp  PlatformUtils.win.cpp  Renderer.cpp  Renderer.h  ResourceManager.h  SysOpenGL.h  TCASHack.cpp  TCASHack.h  TexUtils.cpp  TexUtils.h  XOGLUtils.cpp  XOGLUtils.h  XObjReadWrite.cpp  XObjReadWrite.h  XPCAircraft.cpp  XPMPMultiplayer.cpp  XPMPMultiplayerCSL.cpp  XPMPMultiplayerCSL.h  (+15 more)
src/legacycsl/: BitmapUtils.h  GlDebug.cpp  GlDebug.h  Interpolation.h  Interpolation.i  LegacyCSL.cpp  LegacyCSL.h  LegacyObj.cpp  LegacyObj.h  TexUtils.cpp  TexUtils.h  XOGLUtils.cpp  XOGLUtils.h  XObjDefs.cpp  XObjDefs.h  XObjReadWrite.h  XPMPMultiplayerObj.cpp  XPMPMultiplayerObj.h
src/obj8/: InstanceCompat.cpp  InstanceCompat.h  InstanceWrapper.cpp  InstanceWrapper.h  Obj8Attachment.cpp  Obj8Attachment.h  Obj8CSL.cpp  Obj8CSL.h  Obj8Common.h  Obj8InstanceData.cpp  Obj8InstanceData.h  XPMPMultiplayerObj8.cpp
